[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dotenvy = "0.15"
diesel = { version = "2.0.2", features = ["postgres", "serde_json"] }
actix-web = "4"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
serde_qs = { version = "0.12.0", features = ["actix4"] }
