[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1.21.0", features = ["full"] }
common = { path = "../common" }
serde_path_to_error = "0.1.9"
dotenvy = "0.15"
diesel = { version = "2.0.2", features = ["postgres", "serde_json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
